--- a/public/team/index.html
+++ b/public/team/index.html
@@ -695,7 +695,7 @@
 </li>
 <li><strong>Xikun Zhang</strong> (Co-advisor), June 2020 - present,
 <ul>
-<li><strong>IEEE T-PAMI</strong> x 1, <strong>ICDM</strong> x 1</li>
+<li><strong>IEEE T-PAMI</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>ICDM</strong> x 1</li>
 </ul>
 </li>
 </ul>
