--- a/services/index.html
+++ b/services/index.html
@@ -707,6 +707,7 @@
 </ul>
 <h4 id="session-chairs">Session Chairs</h4>
 <ul>
+<li>ICDM 2022: Graph Learning II</li>
 <li>ICDM 2021: Sequences and Time Series</li>
 <li>ICDM 2021: Networks</li>
 <li>KDD 2021:  Graphs and Networks</li>
@@ -730,11 +731,11 @@
 <li>ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR) 2020</li>
 <li>IEEE International Conference on Data Mining (ICDM) 2017 - 2022</li>
 <li>SIAM International Conference on Data Mining (SDM) 2017 - 2023</li>
-<li>ACM International WSDM Conference (WSDM) 2020, 2021</li>
-<li>Conference on Empirical Methods in Natural Language Processing (EMNLP) 2021</li>
+<li>ACM International WSDM Conference (WSDM) 2020, 2021, 2023</li>
+<li>Conference on Empirical Methods in Natural Language Processing (EMNLP) 2021, 2023</li>
 <li>The European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD) 2020</li>
 <li>ACM International Conference on Information and Knowledge Management (CIKM) 2019</li>
-<li>Design Automation Conference (DAC) 2022</li>
+<li>Design Automation Conference (DAC) 2022, 2023</li>
 <li>IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE) 2018, 2019</li>
 <li>IEEE International Conference on Data Science and Advanced Analytics (DSAA) 2018-2020</li>
 <li>IEEE International Conference on Semantic Computing (ICSC) 2019, 2020</li>
@@ -747,8 +748,8 @@
 <ul>
 <li>International Conference on Machine Learning (ICML) 2021, 2022</li>
 <li>Neural Information Processing Systems (NeurIPS) 2020-2022</li>
-<li>International Conference on Learning Representations (ICLR) 2021, 2022</li>
-<li>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2019-2022</li>
+<li>International Conference on Learning Representations (ICLR) 2021-2023</li>
+<li>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2019-2023</li>
 <li>IEEE International Conference on Computer Vision (ICCV) 2019</li>
 <li>Europe Conference on Computer Vision (ECCV) 2020, 2022</li>
 <li>Asian Conference on Computer Vision (ACCV) 2021</li>
