--- a/index.html
+++ b/index.html
@@ -2362,7 +2362,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/neuips-22-b/">CGLB: Benchmark Tasks for Continual Graph Learning</a>
+    <a href="/publication/neurips-22-b/">CGLB: Benchmark Tasks for Continual Graph Learning</a>
   </h3>
 
   
@@ -2382,10 +2382,14 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/neurips-22-b/neurips-22-b.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/neuips-22-b/cite.bib">
+        data-filename="/publication/neurips-22-b/cite.bib">
   Cite
 </button>
 
@@ -2490,7 +2494,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/neuips-22-a/">Distributed Distributionally Robust Optimization with Non-Convex Objectives</a>
+    <a href="/publication/neurips-22-a/">Distributed Distributionally Robust Optimization with Non-Convex Objectives</a>
   </h3>
 
   
@@ -2510,10 +2514,14 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/neurips-22-a/neurips-22-a.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/neuips-22-a/cite.bib">
+        data-filename="/publication/neurips-22-a/cite.bib">
   Cite
 </button>
 
