--- a/public/publication/tnse-22/index.html
+++ b/public/publication/tnse-22/index.html
@@ -717,7 +717,7 @@
     
 
   
-  <span >Yang Jiao*</span>, <span >Kai Yang</span>, <span >Dongjin Song</span>, <span >Dacheng Tao</span>
+  <span >Yang Jiao</span>, <span >Kai Yang</span>, <span >Dongjin Song</span>, <span >Dacheng Tao</span>
   </div>
   
   
