--- a/public/research/index.html
+++ b/public/research/index.html
@@ -671,7 +671,7 @@
   <div class="article-style"><p>My research is generously supported by 
 <a href="https://www.nsf.gov/" target="_blank" rel="noopener"><strong>NSF</strong></a>, 
 <a href="https://www.usda.gov/" target="_blank" rel="noopener"><strong>USDA</strong></a>, 
-<a href="https://www.morganstanley.com/" target="_blank" rel="noopener"><strong>Morgan Stanley</strong></a> 
+<a href="https://www.morganstanley.com/" target="_blank" rel="noopener"><strong>Morgan Stanley</strong></a>, 
 <a href="https://www.nec-labs.com/" target="_blank" rel="noopener"><strong>NEC Labs America</strong></a>, 
 <a href="https://www.travelers.com/" target="_blank" rel="noopener"><strong>Travelers</strong></a>, <strong>UConn Foundation</strong>, and <strong>UConn OVPR</strong>.</p>
 <table>
