--- a/public/publication/neurips-22-b/index.html
+++ b/public/publication/neurips-22-b/index.html
@@ -329,7 +329,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Xikun Zhang"
+    "name": "Xikun Zhang*"
   },
   
   "publisher": {
@@ -717,7 +717,7 @@
     
 
   
-  <span >Xikun Zhang</span>, <span >Dongjin Song</span>, <span >Dacheng Tao</span>
+  <span >Xikun Zhang*</span>, <span >Dongjin Song</span>, <span >Dacheng Tao</span>
   </div>
   
   
