--- a/research/index.html
+++ b/research/index.html
@@ -686,6 +686,13 @@
 </thead>
 <tbody>
 <tr>
+<td>PI</td>
+<td>NEC Labs America</td>
+<td>Gift Fund</td>
+<td>2022.10 - 2023.3</td>
+<td></td>
+</tr>
+<tr>
 <td>Co-PI</td>
 <td>NSF</td>
 <td>Collaborative Research: CNS: CORE: Small: Hierarchical Deep Reinforcement Learning for Routing in Mobile Wireless Networks</td>
@@ -738,7 +745,7 @@
 <td>PI</td>
 <td>UConn OVPR</td>
 <td>UConn Research Excellence Program Award</td>
-<td>2021.5-2023.5</td>
+<td>2021.5-2023.8</td>
 <td></td>
 </tr>
 </tbody>
