--- a/services/index.html
+++ b/services/index.html
@@ -669,6 +669,10 @@
 <div class="universal-wrapper">
   
   <div class="article-style"><h2 id="services">Services</h2>
+<h3 id="editorial-board---journals">Editorial Board - Journals</h3>
+<ul>
+<li>Associate Editor, Neurocomputing (Elsevier) (IF=5.719), from 12/2022 - Present</li>
+</ul>
 <h3 id="referee-journals">Referee-Journals</h3>
 <ul>
 <li>Journal of Machine Learning Research</li>
@@ -718,8 +722,8 @@
 </ul>
 <h4 id="senior-program-committee-members">Senior Program Committee Members</h4>
 <ul>
-<li>AAAI Conference on Artificial Intelligence (AAAI) 2019, 2021, 2022, 2023</li>
-<li>International Joint Conference on Artificial Intelligence (IJCAI) 2021</li>
+<li>AAAI Conference on Artificial Intelligence (AAAI) 2019, 2021 - 2023</li>
+<li>International Joint Conference on Artificial Intelligence (IJCAI) 2021, 2023</li>
 <li>ACM International Conference on Information and Knowledge Management (CIKM) 2019 (Applied Research Track)</li>
 </ul>
 <h4 id="program-committee-members">Program Committee Members</h4>
