--- a/public/team/index.html
+++ b/public/team/index.html
@@ -680,6 +680,7 @@
 <a href="https://sites.google.com/view/jayjiang/home" target="_blank" rel="noopener"><strong>Yushan Jiang</strong></a>, Spring 2022 - ,
 <ul>
 <li>GE Fellowship, 2022</li>
+<li><strong>CISS</strong> x 1,</li>
 </ul>
 </li>
 <li><strong>Binghao Lu</strong>, Fall 2021 - ,
@@ -701,28 +702,25 @@
 </ul>
 <p><strong><span style="color:#DE3163">Master Students</span></strong></p>
 <ul>
-<li><strong>Mohammad Maldani</strong>, Spring 2022-</li>
+<li><strong>Sebastiano Alderucci</strong>, Fall 2022-</li>
 </ul>
 <p><strong><span style="color:#DE3163">Undergraduate Students</span></strong></p>
 <ul>
-<li><strong>John Coleman</strong>, Spring 2022 -</li>
 <li><strong>Rahul Bhagwani</strong>, Spring 2022-</li>
 </ul>
 <p><strong><span style="color:#DE3163">Intern &amp; High School Students</span></strong></p>
+<p><strong><span style="color:#DE3163">Former Members</span></strong></p>
 <ul>
-<li><strong>Hangyue Li</strong>, Summer 2021 -
+<li><strong>Hangyue Li</strong>, Summer 2021 - Spring 2022, Remote Intern
 <ul>
 <li>UESTC -&gt; Ph.D. student @ Washington University in St. Louis (CS Major)</li>
 </ul>
 </li>
-<li><strong>Jason Zhou</strong>, Fall 2021 -
+<li><strong>Jason Zhou</strong>, Fall 2021 - Spring 2022,
 <ul>
 <li>Glastonbury High School -&gt; B.S. student @ University of Michigan (CS Major)</li>
 </ul>
 </li>
-</ul>
-<p><strong><span style="color:#DE3163">Former Members</span></strong></p>
-<ul>
 <li><strong>Varsha Rathore</strong>, Fall 2020 - Spring 2021
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
@@ -742,7 +740,7 @@
 <li><strong>Chang Li</strong>, 2018 - 2021, Co-advisor
 <ul>
 <li>Ph.D Student, University of Sydney</li>
-<li><strong>KDD</strong> x 1</li>
+<li><strong>KDD</strong> x 1, <strong>ICLR</strong> x 1</li>
 <li>Employment: JD Explore Academy, Research Scientist</li>
 </ul>
 </li>
