--- a/public/index.html
+++ b/public/index.html
@@ -839,11 +839,7 @@
 <tbody>
 <tr>
 <td><code>Feb 2023</code></td>
-<td>One paper is accepted to Annual Conference</td>
-</tr>
-<tr>
-<td>on Information Sciences and System (CISS) 2023, Congratulations to Yushan!</td>
-<td></td>
+<td>One paper is accepted to Annual Conference on Information Sciences and System (CISS) 2023, Congratulations to Yushan!</td>
 </tr>
 <tr>
 <td><code>Jan 2023</code></td>
