--- a/research/index.html
+++ b/research/index.html
@@ -686,10 +686,24 @@
 </thead>
 <tbody>
 <tr>
+<td>&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-</td>
+<td>&mdash;&mdash;&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;</td>
+</tr>
+<tr>
 <td>PI</td>
 <td>NEC Labs America</td>
 <td>Gift Fund</td>
-<td>2022.10 - 2023.3</td>
+<td>2023.9 - 2023.12</td>
+<td></td>
+</tr>
+<tr>
+<td>PI</td>
+<td>Morgan Stanley</td>
+<td>Gift Fund</td>
+<td>2023.9 - 2024.8</td>
 <td></td>
 </tr>
 <tr>
@@ -697,20 +711,6 @@
 <td>NSF</td>
 <td>Collaborative Research: CNS: CORE: Small: Hierarchical Deep Reinforcement Learning for Routing in Mobile Wireless Networks</td>
 <td>2022.4 - 2025.3</td>
-<td></td>
-</tr>
-<tr>
-<td>PI</td>
-<td>Morgan Stanley</td>
-<td>Gift Fund</td>
-<td>2022 - 2023</td>
-<td></td>
-</tr>
-<tr>
-<td>PI</td>
-<td>NEC Labs America</td>
-<td>Gift Fund</td>
-<td>2022.1 - 2022.12</td>
 <td></td>
 </tr>
 <tr>
@@ -725,6 +725,34 @@
 <td>USDA-NIFA</td>
 <td>Evaluating the Impact of Preferential Trade Agreements on Agricultural and Food Trade: New Insights from Natural Language Processing and Machine Learning</td>
 <td>2022.1-2025.12</td>
+<td></td>
+</tr>
+<tr>
+<td>&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-</td>
+<td>&mdash;&mdash;&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;</td>
+</tr>
+<tr>
+<td>&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-</td>
+<td>&mdash;&mdash;&mdash;&mdash;&ndash;</td>
+<td>&mdash;&mdash;&mdash;&mdash;&mdash;</td>
+</tr>
+<tr>
+<td>PI</td>
+<td>NEC Labs America</td>
+<td>Gift Fund</td>
+<td>2022.1 - 2022.12</td>
+<td></td>
+</tr>
+<tr>
+<td>PI</td>
+<td>Morgan Stanley</td>
+<td>Gift Fund</td>
+<td>2022.9 - 2023.8</td>
 <td></td>
 </tr>
 <tr>
