--- a/teaching/index.html
+++ b/teaching/index.html
@@ -678,9 +678,19 @@
 </thead>
 <tbody>
 <tr>
-<td><code>Fall 2022</code></td>
+<td><code>Fall 2023</code></td>
 <td>CSE 2500</td>
 <td>Introduction to Discrete Systems</td>
+</tr>
+<tr>
+<td><code>Spring 2023</code></td>
+<td>CSE 5713</td>
+<td>Data Mining (Evaluation: 4.5/5.0)</td>
+</tr>
+<tr>
+<td><code>Fall 2022</code></td>
+<td>CSE 2500</td>
+<td>Introduction to Discrete Systems    (Evaluation: 3.7/5.0)</td>
 </tr>
 <tr>
 <td><code>Spring 2022</code></td>
