--- a/public/research/index.html
+++ b/public/research/index.html
@@ -679,19 +679,12 @@
 <tr>
 <th>Role</th>
 <th>Source</th>
-<th>Project</th>
+<th>Project (Active)</th>
 <th>Time</th>
 <th></th>
 </tr>
 </thead>
 <tbody>
-<tr>
-<td>&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-</td>
-<td>&mdash;&mdash;&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;</td>
-</tr>
 <tr>
 <td>PI</td>
 <td>NEC Labs America</td>
@@ -727,20 +720,19 @@
 <td>2022.1-2025.12</td>
 <td></td>
 </tr>
+</tbody>
+</table>
+<table>
+<thead>
 <tr>
-<td>&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-</td>
-<td>&mdash;&mdash;&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;</td>
+<th>Role</th>
+<th>Source</th>
+<th>Project (Finalized)</th>
+<th>Time</th>
+<th></th>
 </tr>
-<tr>
-<td>&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-</td>
-<td>&mdash;&mdash;&mdash;&mdash;&ndash;</td>
-<td>&mdash;&mdash;&mdash;&mdash;&mdash;</td>
-</tr>
+</thead>
+<tbody>
 <tr>
 <td>PI</td>
 <td>NEC Labs America</td>
