--- a/public/team/index.html
+++ b/public/team/index.html
@@ -678,16 +678,20 @@
 <li><strong>Zijie Pan</strong>, Fall 2022 - ,
 <ul>
 <li>BS and MS from University of Virginia</li>
-<li>GE Fellowship for Excellence 2023</li>
+<li><strong>GE Fellowship</strong> for Excellence 2023</li>
+<li><strong>UConn CSE Predoctoral Fellowship</strong> (Honorable Mention), 2023</li>
+<li>Tutorials at <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 </ul>
 </li>
 <li>
 <a href="https://sites.google.com/view/jayjiang/home" target="_blank" rel="noopener"><strong>Yushan Jiang</strong></a>, Spring 2022 - ,
 <ul>
 <li>BS from CAUC and MS from ERAU</li>
-<li>GE Fellowship for Excellence 2023</li>
-<li>GE Fellowship for Next Gen Scholar, 2022</li>
+<li><strong>GE Fellowship</strong> for Excellence 2023</li>
+<li><strong>UConn CSE Predoctoral Fellowship</strong> (Outstanding Scholarly and Research Accomplishments), 2023</li>
+<li><strong>GE Fellowship</strong> for Next Gen Scholar, 2022</li>
 <li><strong>KDD</strong> x 1, <strong>CISS</strong> x 1,</li>
+<li>Tutorials at <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 </ul>
 </li>
 <li><strong>Binghao Lu</strong>, Fall 2021 - ,
@@ -700,14 +704,15 @@
 <ul>
 <li>BS from Huazhong Agricultural University</li>
 <li>Cigna Fellowship, 2021</li>
-<li>GE Fellowship, 2022</li>
-<li>GE Fellowship for Excellence, 2023</li>
+<li><strong>GE Fellowship</strong>, 2022</li>
+<li><strong>GE Fellowship</strong> for Excellence, 2023</li>
 </ul>
 </li>
 <li><strong>Xikun Zhang</strong> (Co-advisor), June 2020 - present,
 <ul>
 <li>BS from USTC and MS from University of Sydney</li>
 <li><strong>IEEE T-PAMI</strong> x 1, <strong>IEEE T-NNLS</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>ICDM</strong> x 1</li>
+<li>Tutorials at <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 </ul>
 </li>
 <li><strong>Mate Pavelic</strong> (Visitor), August 2023,
@@ -729,20 +734,32 @@
 </ul>
 <p><strong><span style="color:#DE3163">High School Students</span></strong></p>
 <ul>
-<li><strong>Spencer Danese</strong>, Summer 2023-</li>
-<li><strong>Jay Tummala</strong>, Summer 2023-</li>
-<li><strong>Arnav Kumar</strong>, Summer 2023-</li>
+<li><strong>Spencer Danese</strong>, Summer 2023-
+<ul>
+<li>Glastonbury High School</li>
+</ul>
+</li>
+<li><strong>Jay Tummala</strong>, Summer 2023-
+<ul>
+<li>Glastonbury High School</li>
+</ul>
+</li>
+<li><strong>Arnav Kumar</strong>, Summer 2023-
+<ul>
+<li>South Windsor High School</li>
+</ul>
+</li>
 </ul>
 <p><strong><span style="color:#DE3163">Former Members</span></strong></p>
 <ul>
 <li><strong>Hangyue Li</strong>, Summer 2021 - Spring 2022, Remote Intern
 <ul>
-<li>UESTC -&gt; Ph.D. student @ Washington University in St. Louis (CS Major)</li>
+<li>UESTC -&gt; CS Ph.D. student of CS @ Washington University in St. Louis</li>
 </ul>
 </li>
 <li><strong>Jason Zhou</strong>, Fall 2021 - Spring 2022,
 <ul>
-<li>Glastonbury High School -&gt; B.S. student @ University of Michigan (CS Major)</li>
+<li>Glastonbury High School -&gt; B.S. student of CS @ University of Michigan</li>
 </ul>
 </li>
 <li><strong>Varsha Rathore</strong>, Fall 2020 - Spring 2021
@@ -763,7 +780,7 @@
 </li>
 <li><strong>Chang Li</strong>, 2018 - 2021, Co-advisor
 <ul>
-<li>Ph.D Student, University of Sydney</li>
+<li>Ph.D. Student, University of Sydney</li>
 <li><strong>KDD</strong> x 1, <strong>ICLR</strong> x 1</li>
 <li>Employment: JD Explore Academy, Research Scientist</li>
 </ul>
