--- a/public/research/index.html
+++ b/public/research/index.html
@@ -674,6 +674,7 @@
 <a href="https://www.morganstanley.com/" target="_blank" rel="noopener"><strong>Morgan Stanley</strong></a>, 
 <a href="https://www.nec-labs.com/" target="_blank" rel="noopener"><strong>NEC Labs America</strong></a>, 
 <a href="https://www.travelers.com/" target="_blank" rel="noopener"><strong>Travelers</strong></a>, <strong>UConn Foundation</strong>, and <strong>UConn OVPR</strong>.</p>
+<p>The following projects are active:</p>
 <table>
 <thead>
 <tr>
@@ -722,6 +723,7 @@
 </tr>
 </tbody>
 </table>
+<p>The following projects have been successfully finalized.</p>
 <table>
 <thead>
 <tr>
