--- a/public/team/index.html
+++ b/public/team/index.html
@@ -675,7 +675,7 @@
 </ul>
 <p><strong><span style="color:#DE3163">Ph.D. Students</span></strong></p>
 <ul>
-<li><strong>Zijie Pan</strong>, Fall 2022 - ,
+<li><strong>Zijie Pan</strong>, Fall 2022 -
 <ul>
 <li>BS and MS from University of Virginia</li>
 <li><strong>GE Fellowship</strong> for Excellence 2023</li>
@@ -684,7 +684,7 @@
 </ul>
 </li>
 <li>
-<a href="https://sites.google.com/view/jayjiang/home" target="_blank" rel="noopener"><strong>Yushan Jiang</strong></a>, Spring 2022 - ,
+<a href="https://sites.google.com/view/jayjiang/home" target="_blank" rel="noopener"><strong>Yushan Jiang</strong></a>, Spring 2022 -
 <ul>
 <li>BS from CAUC and MS from ERAU</li>
 <li><strong>GE Fellowship</strong> for Excellence 2023</li>
@@ -694,13 +694,13 @@
 <li>Tutorials at <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 </ul>
 </li>
-<li><strong>Binghao Lu</strong>, Fall 2021 - ,
+<li><strong>Binghao Lu</strong>, Fall 2021 -
 <ul>
 <li>BE from HIT and MS from UCF</li>
 <li>Cigna Fellowship, 2021</li>
 </ul>
 </li>
-<li><strong>Qianying Ren</strong>, Fall 2021 - ,
+<li><strong>Qianying Ren</strong>, Fall 2021 -
 <ul>
 <li>BS from Huazhong Agricultural University</li>
 <li>Cigna Fellowship, 2021</li>
@@ -708,14 +708,14 @@
 <li><strong>GE Fellowship</strong> for Excellence, 2023</li>
 </ul>
 </li>
-<li><strong>Xikun Zhang</strong> (Co-advisor), June 2020 - present,
+<li><strong>Xikun Zhang</strong> (Co-advisor), June 2020 -
 <ul>
 <li>BS from USTC and MS from University of Sydney</li>
 <li><strong>IEEE T-PAMI</strong> x 1, <strong>IEEE T-NNLS</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>ICDM</strong> x 1</li>
 <li>Tutorials at <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 </ul>
 </li>
-<li><strong>Mate Pavelic</strong> (Visitor), August 2023,
+<li><strong>Mate Pavelic</strong> (Visitor), August 2023 -
 <ul>
 <li>BS and MS from University of Zagreb</li>
 </ul>
@@ -723,28 +723,28 @@
 </ul>
 <p><strong><span style="color:#DE3163">Master Students</span></strong></p>
 <ul>
-<li><strong>Susmita Ojha</strong>, Fall 2022-</li>
-<li><strong>Sebastiano Alderucci</strong>, Fall 2022-</li>
-<li><strong>Madani Mohammad</strong>, Fall 2022-</li>
+<li><strong>Susmita Ojha</strong>, Fall 2022 -</li>
+<li><strong>Sebastiano Alderucci</strong>, Fall 2022 -</li>
+<li><strong>Madani Mohammad</strong>, Fall 2022 -</li>
 </ul>
 <p><strong><span style="color:#DE3163">Undergraduate Students</span></strong></p>
 <ul>
-<li><strong>Rahul Bhagwani</strong>, Spring 2022-</li>
-<li><strong>Okem Chime</strong>, Summer 2023-</li>
+<li><strong>Rahul Bhagwani</strong>, Spring 2022 -</li>
+<li><strong>Okem Chime</strong>, Summer 2023 -</li>
 </ul>
 <p><strong><span style="color:#DE3163">High School Students</span></strong></p>
 <ul>
-<li><strong>Spencer Danese</strong>, Summer 2023-
+<li><strong>Spencer Danese</strong>, Summer 2023 -
 <ul>
 <li>Glastonbury High School</li>
 </ul>
 </li>
-<li><strong>Jay Tummala</strong>, Summer 2023-
+<li><strong>Jay Tummala</strong>, Summer 2023 -
 <ul>
 <li>Glastonbury High School</li>
 </ul>
 </li>
-<li><strong>Arnav Kumar</strong>, Summer 2023-
+<li><strong>Arnav Kumar</strong>, Summer 2023 -
 <ul>
 <li>South Windsor High School</li>
 </ul>
