--- a/publication/iclr-23-a/index.html
+++ b/publication/iclr-23-a/index.html
@@ -329,7 +329,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Chang Li"
+    "name": "Chang Li*"
   },
   
   "publisher": {
@@ -717,7 +717,7 @@
     
 
   
-  <span >Chang Li</span>, <span >Dongjin Song</span>, <span >Dacheng Tao</span>
+  <span >Chang Li*</span>, <span >Dongjin Song</span>, <span >Dacheng Tao</span>
   </div>
   
   
