--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
 </tr>
 <tr>
 <td><code>March 2023</code></td>
-<td>Invited to serve on a <strong>NSF IIS</strong> panel!</td>
+<td>Invited to serve on a <strong>NSF</strong> panel!</td>
 </tr>
 <tr>
 <td><strong>
