--- a/public/research/index.html
+++ b/public/research/index.html
@@ -682,15 +682,18 @@
 <th>Source</th>
 <th>Project (Active)</th>
 <th>Time</th>
+<th>Info</th>
 <th></th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>PI</td>
-<td>NEC Labs America</td>
-<td>Gift Fund</td>
-<td>2023.9 - 2023.12</td>
+<td>NSF</td>
+<td>CAREER: Towards Continual Learning on Evolving Graphs: from Memorization to Generalization</td>
+<td>2024.4 - 2029.3</td>
+<td>
+<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2338878&amp;HistoricalAwards=false" target="_blank" rel="noopener">Link</a></td>
 <td></td>
 </tr>
 <tr>
@@ -699,12 +702,15 @@
 <td>Gift Fund</td>
 <td>2023.9 - 2024.8</td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Co-PI</td>
 <td>NSF</td>
 <td>Collaborative Research: CNS: CORE: Small: Hierarchical Deep Reinforcement Learning for Routing in Mobile Wireless Networks</td>
 <td>2022.4 - 2025.3</td>
+<td>
+<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2154191" target="_blank" rel="noopener">Link</a></td>
 <td></td>
 </tr>
 <tr>
@@ -712,6 +718,8 @@
 <td>USDA-NIFA</td>
 <td>DSFAS-CIN: Harnessing Mobility Big Data and Artificial Intelligence Through a Transdisciplinary Research Network in Food Production, Processing, and Consumption Systems</td>
 <td>2022.1-2025.12</td>
+<td>
+<a href="https://portal.nifa.usda.gov/web/crisprojectpages/1028264-dsfas-cin-harnessing-mobility-big-data-and-artificial-intelligence-through-a-transdisciplinary-research-network-in-food-production-processing-and-consumption-systems.html" target="_blank" rel="noopener">Link</a></td>
 <td></td>
 </tr>
 <tr>
@@ -719,6 +727,8 @@
 <td>USDA-NIFA</td>
 <td>Evaluating the Impact of Preferential Trade Agreements on Agricultural and Food Trade: New Insights from Natural Language Processing and Machine Learning</td>
 <td>2022.1-2025.12</td>
+<td>
+<a href="https://portal.nifa.usda.gov/web/crisprojectpages/1028020-evaluating-the-impact-of-preferential-trade-agreements-on-agricultural-and-food-trade-new-insights-from-natural-language-processing-and-machine-learning.html" target="_blank" rel="noopener">Link</a></td>
 <td></td>
 </tr>
 </tbody>
@@ -735,6 +745,13 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>PI</td>
+<td>NEC Labs America</td>
+<td>Gift Fund</td>
+<td>2023.9 - 2023.12</td>
+<td></td>
+</tr>
 <tr>
 <td>PI</td>
 <td>NEC Labs America</td>
