--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -678,9 +678,14 @@
 </thead>
 <tbody>
 <tr>
+<td><code>Spring 2024</code></td>
+<td>CSE 4095</td>
+<td>Introduction to Data Science &amp; Engineering</td>
+</tr>
+<tr>
 <td><code>Fall 2023</code></td>
 <td>CSE 2500</td>
-<td>Introduction to Discrete Systems</td>
+<td>Introduction to Discrete Systems (Evaluation: 4.0/5.0)</td>
 </tr>
 <tr>
 <td><code>Spring 2023</code></td>
