--- a/public/team/index.html
+++ b/public/team/index.html
@@ -674,11 +674,12 @@
 <a href="https://songdj.github.io/" target="_blank" rel="noopener"><strong>Dongjin Song</strong></a></li>
 </ul>
 <p><strong><span style="color:#DE3163">Graduate Students</span></strong></p>
-<!-- +
-* **Kanghui Ning**, Ph.D. student, Fall 2024 -
-  * BE from UESTC and MS from Huazhong University of Science and Technology (HUST)
-+ -->
 <ul>
+<li><strong>Kanghui Ning</strong>, Ph.D. student, Fall 2024 -
+<ul>
+<li>BE from UESTC and MS from Huazhong University of Science and Technology (HUST)</li>
+</ul>
+</li>
 <li><strong>Xuyang Shen</strong>, Ph.D. student, Spring 2024 -
 <ul>
 <li>BE from UESTC and MS from University of California San Diego (UCSD)</li>
@@ -699,85 +700,71 @@
 <li><strong>GE Fellowship</strong> for Excellence 2023</li>
 <li><strong>UConn CSE Predoctoral Fellowship</strong> (Outstanding Scholarly and Research Accomplishments), 2023</li>
 <li><strong>GE Fellowship</strong> for Next Gen Scholar, 2022</li>
-<li><strong>KDD</strong> x 1, <strong>CISS</strong> x 1,</li>
-<li>Tutorials at <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
-</ul>
-</li>
-<li><strong>Binghao Lu</strong>, Ph.D. student, Fall 2021 -
-<ul>
-<li>BE from HIT and MS from UCF</li>
-<li>Cigna Fellowship, 2021</li>
+<li><strong>KDD</strong> x 1, <strong>IJCAI</strong> x 1, <strong>CISS</strong> x 1,</li>
+<li>Tutorials at <strong>KDD</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
 </ul>
 </li>
 <li><strong>Qianying Ren</strong>, Ph.D. student, Fall 2021 -
 <ul>
 <li>BS from Huazhong Agricultural University</li>
 <li>Cigna Fellowship, 2021</li>
+<li><strong>ICDM</strong> x 1,</li>
 <li><strong>GE Fellowship</strong>, 2022</li>
 <li><strong>GE Fellowship</strong> for Excellence, 2023</li>
 </ul>
 </li>
-<li><strong>Xikun Zhang</strong> (Co-advisor), Ph.D. student, June 2020 -
-<ul>
-<li>BS from USTC and MS from University of Sydney</li>
-<li><strong>IEEE T-PAMI</strong> x 1, <strong>IEEE T-NNLS</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>ICDM</strong> x 1</li>
-<li>Tutorials at <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
-</ul>
-</li>
 <li><strong>Yamila Garcia</strong>, Master student, Spring 2024 -</li>
 <li><strong>Xinhao Wang</strong>, Master student, Spring 2024 -</li>
+<li><strong>Nikolas Anagnostou</strong>, Master student, Fall 2024 -</li>
 </ul>
 <p><strong><span style="color:#DE3163">Undergraduate Students</span></strong></p>
 <ul>
 <li><strong>Anshul Rastogi</strong>, Fall 2023 -</li>
-<li><strong>Trinity Mink</strong>, Fall 2023 -</li>
 <li><strong>Brendan Barnett</strong>, Fall 2023 -</li>
 </ul>
 <p><strong><span style="color:#DE3163">High School Students</span></strong></p>
 <ul>
-<li><strong>Arnav Kumar</strong>, Summer 2023 -
+<li><strong>Jesse Wang</strong>, Fall 2024 -
 <ul>
-<li>South Windsor High School</li>
+<li>Glastonbury High School</li>
 </ul>
 </li>
 </ul>
 <p><strong><span style="color:#DE3163">Former Members</span></strong></p>
 <ul>
-<li><strong>Susmita Ojha</strong>, Fall 2022 - Spring 2023
+<li>
+<p><strong>Xikun Zhang</strong> (Co-advisor), Ph.D. student, June 2020 - Spring 2024</p>
 <ul>
-<li>Master Student, University of Connecticut</li>
+<li>BS from USTC and MS from University of Sydney</li>
+<li><strong>IEEE T-PAMI</strong> x 1, <strong>IEEE T-NNLS</strong> x 1, <strong>NeurIPS</strong> x 1, <strong>KDD</strong> x 1, <strong>ICDM</strong> x 1</li>
+<li>Tutorials at <strong>AAAI</strong> 2024, <strong>IJCAI</strong> 2024, <strong>WWW</strong> 2023 and <strong>SDM</strong> 2023</li>
+<li>Employment: Nanyang Technological University, Presidential Postdoc</li>
 </ul>
 </li>
-<li><strong>Sebastiano Alderucci</strong>, Fall 2022 - Spring 2023
-<ul>
-<li>Master Student, University of Connecticut</li>
-</ul>
-</li>
-<li><strong>Madani Mohammad</strong>, Fall 2022 - Fall 2023
-<ul>
-<li>Master Student, University of Connecticut</li>
-</ul>
-</li>
-<li><strong>Chang Li</strong>, 2018 - 2021, Co-advisor
+<li>
+<p><strong>Chang Li</strong>, 2018 - 2021, Co-advisor</p>
 <ul>
 <li>Ph.D. Student, University of Sydney</li>
 <li><strong>KDD</strong> x 1, <strong>ICLR</strong> x 1</li>
 <li>Employment: JD Explore Academy, Research Scientist</li>
 </ul>
 </li>
-<li><strong>Wei Zhu</strong>, May 2020 - Aug 2020, Intern at NEC Labs America
+<li>
+<p><strong>Wei Zhu</strong>, May 2020 - Aug 2020, Intern at NEC Labs America</p>
 <ul>
 <li>Ph.D student, University of Rochester</li>
 </ul>
 </li>
-<li><strong>Dixian Zhu</strong>, May 2019 - Aug 2019, Intern at NEC Labs America
+<li>
+<p><strong>Dixian Zhu</strong>, May 2019 - Aug 2019, Intern at NEC Labs America</p>
 <ul>
 <li>Ph.D Student, University of Iowa</li>
 <li><strong>AAAI</strong> x 1</li>
 </ul>
 </li>
 <li>
-<a href="https://chuxuzhang.github.io/" target="_blank" rel="noopener"><strong>Chuxu Zhang</strong></a>, May 2018 - Aug 2018, Intern at NEC Labs America
+<p>
+<a href="https://chuxuzhang.github.io/" target="_blank" rel="noopener"><strong>Chuxu Zhang</strong></a>, May 2018 - Aug 2018, Intern at NEC Labs America</p>
 <ul>
 <li>Ph.D Student, University of Notre Dame</li>
 <li><strong>AAAI</strong> x 1, <strong>KDD</strong> x 1, Patent App x1</li>
@@ -786,7 +773,8 @@
 </ul>
 </li>
 <li>
-<a href="http://www.columbia.edu/~xf2143/" target="_blank" rel="noopener"><strong>Xinyang Feng</strong></a>, May 2018 - Aug 2018, Intern at NEC Labs America
+<p>
+<a href="http://www.columbia.edu/~xf2143/" target="_blank" rel="noopener"><strong>Xinyang Feng</strong></a>, May 2018 - Aug 2018, Intern at NEC Labs America</p>
 <ul>
 <li>Ph.D student, Columbia University</li>
 <li><strong>ACM MM</strong> x 1, <strong>AAAI</strong> x 1, Patent App x 1</li>
@@ -795,7 +783,8 @@
 </ul>
 </li>
 <li>
-<a href="https://www.linkedin.com/in/yuanpu-x-712a6353/" target="_blank" rel="noopener"><strong>Yuanpu Xie</strong></a>, May 2017 - Aug 2017, Intern at NEC Labs America
+<p>
+<a href="https://www.linkedin.com/in/yuanpu-x-712a6353/" target="_blank" rel="noopener"><strong>Yuanpu Xie</strong></a>, May 2017 - Aug 2017, Intern at NEC Labs America</p>
 <ul>
 <li>Ph.D student, University of Florida</li>
 <li>Employment: 
@@ -803,7 +792,8 @@
 </ul>
 </li>
 <li>
-<a href="http://cseweb.ucsd.edu/~yaq007/" target="_blank" rel="noopener"><strong>Yao Qin</strong></a>, June 2016 - Sep 2016, Intern at NEC Labs America
+<p>
+<a href="http://cseweb.ucsd.edu/~yaq007/" target="_blank" rel="noopener"><strong>Yao Qin</strong></a>, June 2016 - Sep 2016, Intern at NEC Labs America</p>
 <ul>
 <li>Ph.D student, University of California San Diego</li>
 <li><strong>IJCAI</strong> x 1, Patent x 1, Patent App x 1</li>
@@ -811,48 +801,81 @@
 <a href="https://research.google/teams/brain/" target="_blank" rel="noopener">Google Brain</a>, Research Scientist</li>
 </ul>
 </li>
-<li><strong>Okem Chime</strong>, Summer 2023 - Fall 2023
+<li>
+<p><strong>Susmita Ojha</strong>, Fall 2022 - Spring 2023</p>
+<ul>
+<li>Master Student, University of Connecticut</li>
+</ul>
+</li>
+<li>
+<p><strong>Sebastiano Alderucci</strong>, Fall 2022 - Spring 2023</p>
+<ul>
+<li>Master Student, University of Connecticut</li>
+</ul>
+</li>
+<li>
+<p><strong>Madani Mohammad</strong>, Fall 2022 - Fall 2023</p>
+<ul>
+<li>Master Student, University of Connecticut</li>
+</ul>
+</li>
+<li>
+<p><strong>Okem Chime</strong>, Summer 2023 - Fall 2023</p>
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li><strong>Rahul Bhagwani</strong>, Spring 2022 - Spring 2023
+<li>
+<p><strong>Rahul Bhagwani</strong>, Spring 2022 - Spring 2023</p>
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li><strong>Varsha Rathore</strong>, Fall 2020 - Spring 2021
+<li>
+<p><strong>Varsha Rathore</strong>, Fall 2020 - Spring 2021</p>
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li><strong>Dylan Manchester</strong>, Spring 2021
+<li>
+<p><strong>Dylan Manchester</strong>, Spring 2021</p>
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 </ul>
 </li>
-<li><strong>Eric Wang</strong>, Spring 2021, Honors Thesis
+<li>
+<p><strong>Eric Wang</strong>, Spring 2021, Honors Thesis</p>
 <ul>
 <li>Undergraduate Student, University of Connecticut</li>
 <li>Employment: Epic Systems, Software Engineer</li>
 </ul>
 </li>
-<li><strong>Spencer Danese</strong>, Summer 2023 - Fall 2023
+<li>
+<p><strong>Arnav Kumar</strong>, Summer 2023 - Fall 2023</p>
+<ul>
+<li>South Windsor High School</li>
+</ul>
+</li>
+<li>
+<p><strong>Spencer Danese</strong>, Summer 2023 - Fall 2023</p>
 <ul>
 <li>Glastonbury High School</li>
 </ul>
 </li>
-<li><strong>Jay Tummala</strong>, Summer 2023 - Fall 2023
+<li>
+<p><strong>Jay Tummala</strong>, Summer 2023 - Fall 2023</p>
 <ul>
 <li>Glastonbury High School</li>
 </ul>
 </li>
-<li><strong>Jason Zhou</strong>, Fall 2021 - Spring 2022,
+<li>
+<p><strong>Jason Zhou</strong>, Fall 2021 - Spring 2022,</p>
 <ul>
 <li>Glastonbury High School -&gt; B.S. student of CS @ University of Michigan</li>
 </ul>
 </li>
-<li><strong>Hangyue Li</strong>, Summer 2021 - Spring 2022, Remote Intern
+<li>
+<p><strong>Hangyue Li</strong>, Summer 2021 - Spring 2022, Remote Intern</p>
 <ul>
 <li>UESTC -&gt; CS Ph.D. student of CS @ Washington University in St. Louis</li>
 </ul>
